--- a/chapter3.tex
+++ b/chapter3.tex
@@ -19,12 +19,8 @@
 各カウンセリング回ごとにテキストデータを分け、さらにヨーガ前とヨーガ後で分けた（計8個のデータ）
 ブラウザ上で
 各テキストファイルを読み込んで形態素解析した。
-D3.jsを用いて単語共起マップを描画した。
-媒介中心性によるカラーリングと、因果関係によるカラーリングとをブラウザ上で選べるようにする。
-ノードをクリックすることで、その単語の生データ内での使用例が表示されるようにする。
-共起マップを見て、人間が同じブラウザ上で文章クラスタリングに用いる特徴語を選択し、クラスタリング結果を表示する。
-カウンセリング文字起こしテキストデータを形態素解析し、共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探す
-→カウンセラーからの質問形態と、 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化する
+形態素解析には、JavaScript言語の形態素解析ライブラリであるkutomoji.jsを使用した。
+カウンセリング文字起こしテキストデータを形態素解析し、共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探す。そこから、カウンセラーからの質問形態と、 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化する
 
 分析
 エキスパートレビュー
