--- a/chapter1.tex
+++ b/chapter1.tex
@@ -13,7 +13,7 @@
 
 カウンセラーの質問内容
 
-YesまたはNoで答える質問、ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている。これに対し、患者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている質問に寄って引き出されるとされている。
+YesまたはNoで答える質問、ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている。これに対し、患者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている。患者が何に問題意識を感じているかをカウンセリングで引き出すには、カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている。しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く、患者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている。
 
 そこで、タイムラインで、クライアントとセラピストの会話を可視化し、セラピストの発した質問によって会話の流れがどのように変化するのかを明らかにすることが重要である。
 
