--- a/chapter3.tex
+++ b/chapter3.tex
@@ -14,7 +14,7 @@
 \section{提案システム1}
 \subsection{手法}
 まず本論文の実験で用いる対象データについて述べる．
-「心療内科における摂食障害専門ヨーガ療法グループ」の「第11回　ヨーガ療法事例検討会」
+本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料を使用した。
 手順
 各カウンセリング回ごとにテキストデータを分け、さらにヨーガ前とヨーガ後で分けた（計8個のデータ）
 ブラウザ上で
@@ -40,7 +40,7 @@ Jsonファイルを\{\}の形式で作成し、読み込ませる。
 Fig.2  セラピストの質問に依る心療内科患者の話題時間変化の可視化
 
 
-次に、紫色ないし濃いグレー色は、セラピストの質問内容を示す。紫色は5W1Hで問われるような「開かれた質問」、濃いグレー色はYes/Noで答えられるような「閉じられた質問」を表している。
+次に、積み重ね折れ線グラフにかかっている、紫色ないし濃いグレー色の縦棒は、カウンセラーの質問内容の形態を示す。紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」、濃いグレー色はYes/Noで答えられる、あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している。第1章で述べた通り、患者が何に問題意識を感じているかをカウンセリングで引き出すには、カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている。
 　模擬データでの可視化結果をFig.3、2014年11月検討会 患者A瞑想後での可視化結果をFig.4、2015年11月検討会 患者A瞑想後での可視化結果をFig.5に示す。
 
 
