--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,6 +1,6 @@
 \section{KH Coder}
 
-様々な手法で渦の可視化は行われている。
+
 
 
 \subsection{単語共起ネットワーク図}
@@ -25,7 +25,12 @@
 
 \subsection{自己組織化マップ}
 
-そこで本システムでは、渦の可視化手法について３次元的な手法と２次元な手法を用意し、切り替えることができるようにすることで、使用者が分析したい問題に合わせた可視化を実現する。これにより、対話性を向上させることができる。
+自己組織化マップ機能によるカウンセリングテキストデータの単語クラスタリングに基づき、その単語グループ分布を集計した。また、自己組織化マップに描画された単語から手動でマイナスイメージないしプラスイメージの単語を選んでそれぞれグループをつくり、その単語グループ分布を集計した。
+
+自己組織化マップ単体の問題点としては、クラスターごとの描画色を自分で選べないこと、作成に1分半〜3分時間がかかることが挙げられる。
+
+
+そこで本システムでは、の可視化手法について３次元的な手法と２次元な手法を用意し、切り替えることができるようにすることで、使用者が分析したい問題に合わせた可視化を実現する。これにより、対話性を向上させることができる。
 
 そこで提案システムとして、カウンセラーからの質問形態と、 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化した。可視化にあたっては、カウンセリング文字起こしテキストデータを形態素解析し、共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探すようプログラミングした。
 
