--- a/chapter3.tex
+++ b/chapter3.tex
@@ -49,7 +49,9 @@ Fig.2  セラピストの質問に依る心療内科患者の話題時間変化の可視化
 
 模擬データでの考察をFig.6、2014年11月検討会 患者A瞑想後での考察をFig.7、2015年11月検討会 患者A瞑想後での考察をFig.8に示す。
 
-インタラクティブ性がない
+　カウンセリングの文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかる。
+　インタラクティブ性がない。
+　
 カウンセラーの質問区分けも手動で修正したい
 どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので、マウスオーバーによって発言内容が表示される仕組みを作りたい
 　原文から、セラピストから患者への質問事項の分類の指標として、患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので、それぞれの発言量の可視化の実装を盛り込みたい。
