--- a/chapter1.tex
+++ b/chapter1.tex
@@ -7,15 +7,14 @@
 
 %%% 各章は以下のように構成される．２章では本論文での関連研究を挙げ，３章ではシステムの手法及び構成について説明する．４章では実験方法を述べ，５章ではその結果を分析する．６章では専門家による評価を述べ，７章で本論文の結論と今後の展望について述べる．
 
-アドラー心理学に基づいた治療、または、カウンセリングでは、アドラー心理学の理論に基づいて、来談者の共同体感覚を育成する目的で、様々な技法が用いられる。そのような治療中、または、カウンセリング中に、治療者、または、カウンセラーが、常に、意識しているのは、来談者のライフスタイルについてである。
+　心療内科では、心身症やストレスからくる身体症状が取り扱われている。
+　アドラー心理学に基づいた治療、または、カウンセリングでは、アドラー心理学の理論に基づいて、来談者の共同体感覚を育成する目的で、様々な技法が用いられる。そのような治療中、または、カウンセリング中に、治療者、または、カウンセラーが、常に、意識しているのは、来談者のライフスタイルについてである。
 アドラー心理学では、人間の問題は、すべて対人関係上の問題であると考える。したがって、アドラー心理学の治療、または、カウンセリングにおいては、来談者が抱えている問題は、対人関係上の問題であり、来談者が自らの使える力をうまく工夫すれば解決できるライフタスクであると考えている。アドラー心理学では、ライフタスクについて、来談者にとっての親疎の関係から、仕事のタスク（Work Task）：永続しない人間関係、交友のタスク（Friendship Task）：永続するが、運命をともにしない人間関係、愛のタスク（Love or Family Task）：永続し、運命をともにする人間関係の3つに区別している。
 人間の問題について、このように恣意的に3つに分類することは、臨床上極めて有効で、アドラー心理学独自のことである。「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では、ビギナーのセラピストに対してカウンセリングに関するアドバイスがなされている。
 
-カウンセラーの質問内容
+　カウンセラーの質問内容については、大きく2種類に分けられている。YesまたはNoで答える質問、ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている。これに対し、患者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている。患者が何に問題意識を感じているかをカウンセリングで引き出すには、カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている。しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く、患者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている。
 
-YesまたはNoで答える質問、ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている。これに対し、患者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている。患者が何に問題意識を感じているかをカウンセリングで引き出すには、カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている。しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く、患者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている。
-
-そこで、タイムラインで、クライアントとセラピストの会話を可視化し、セラピストの発した質問によって会話の流れがどのように変化するのかを明らかにすることが重要である。
+そこで、タイムライン形式の時間軸に沿った可視化によって、クライアントとセラピストの会話を可視化し、セラピストの発した質問によって会話の流れがどのように変化するのかを明らかにすることが重要である。
 
 クライアントの会話としては、内容がどの課題領域（仕事、交友、愛、セルフタスク、スピリチュアル）に属するのか、セラピストの質問としては、内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である。
 
