--- a/chapter2.tex
+++ b/chapter2.tex
@@ -2,10 +2,15 @@
 
 
 
+　KH Coderとは、テキスト文章型のデータを統計分析するためのフリーのソフトウェアである。アンケートの自由記述・インタビュー記録・新聞記事など、さまざまな社会調査データを分析するため、立命館大学の樋口耕一氏が制作したものである。計量テキスト分析またはテキストマイニングの方法に対応している。(KH CoderのWebページ参照)
+
+
+　以下に、KH Coderの主な可視化システムについて紹介する。
+
 
 \subsection{単語共起ネットワーク図}
 
-今回、カウンセリングを文字起こししたテキストデータを形態素解析し、各単語の共起関係のネットワーク図を描画した。今回、テキストデータの形態素解析、および共起関係のネットワークの可視化には、テキストマイニングのフリーソフトウェアである、樋口耕一氏の KH Coder を使用した。解析には、統計計算とグラフィックスのための環境「R」を内部で利用している。
+　カウンセリングを文字起こししたテキストデータを形態素解析し、各単語の共起関係のネットワーク図を描画した。今回、テキストデータの形態素解析、および共起関係のネットワークの可視化には、テキストマイニングのフリーソフトウェアである、樋口耕一氏の KH Coder を使用した。解析には、統計計算とグラフィックスのための環境「R」を内部で利用している。
 テキストデータの形態素解析、および共起関係のネットワークの可視化には、テキストマイニングのフリーソフトウェアである、樋口耕一氏のKH Coderを使用した。解析には、統計計算とグラフィックスのための環境「R」を内部で利用している。
 　KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり、どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である。KH Coderは改行によって段落を認識し、句点によって文を認識する。よってひと段落ないし一文を集計単位として設定することが可能になっている。1)
 
@@ -43,7 +48,7 @@
 
 %%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
 
-カウンセラーの質問の種類分けをいかに行うか
+カウンセラーの質問の種類分けをいかに描画するかが重要となる。
 
 
 次章ではどのようにシステムを構成したかを述べる．
