--- a/chapter3.tex
+++ b/chapter3.tex
@@ -50,17 +50,23 @@ Fig.2  セラピストの質問に依る心療内科患者の話題時間変化の可視化
 模擬データでの考察をFig.6、2014年11月検討会 患者A瞑想後での考察をFig.7、2015年11月検討会 患者A瞑想後での考察をFig.8に示す。
 
 　カウンセリングの文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかる。
-　インタラクティブ性がない。
+　インタラクティブ性がない。現状ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず、1回1回ブラウザ上でページをリロードして、カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている。ブラウザ上でページをリロードしなくも、チェックボックスの選択を変えることでシームレスにグラフが変化することが求められた。
+　
+　
 　
 カウンセラーの質問区分けも手動で修正したい
 どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので、マウスオーバーによって発言内容が表示される仕組みを作りたい
-　原文から、セラピストから患者への質問事項の分類の指標として、患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので、それぞれの発言量の可視化の実装を盛り込みたい。
+　原文から、セラピストから患者への質問事項の分類の指標として、患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので、それぞれの発言量の可視化の実装を盛り込むべきであると考えられる。
+　また、患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや、カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められた。
 
 
 
 
 \section{提案システム2}
 \subsection{手法}
+
+　カウンセリングの文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかっていたのを
+
 \subsection{結果}
 \subsection{考察}
 
