--- a/chapter3.tex
+++ b/chapter3.tex
@@ -25,22 +25,23 @@
 分析
 エキスパートレビュー
 
-使用方法について説明する。
-Jsonファイルを\{\}の形式で作成し、読み込ませる。
-形態素解析にはJavaScriptにおける形態素解析ライブラリであるKuromoji.jsを使用した。
-全角コロン（：）で話者の交代を認識、全角コロン（：）、句点（。）ないしクエスチョンマーク（？,?）で文の終わりを認識するよう設定されている。
+　使用方法について説明する。
+　カウンセリングの文字起こしテキストデータのjsonファイルを[\{"a":"(本文)"\}]の形式で作成し、読み込ませた。
+　jsonファイル内の本文の形式について説明する。全角表示のコロン（：）で話者の交代を認識、全角表示のコロン（：）、全角表示の句点（。）ないしクエスチョンマーク（？,?）で文の終わりを認識するよう設定されている。そのため、話者が交代するたびに全角表示のコロン（：）で区切れ目を示さないといけない。
+　形態素解析にはJavaScriptにおける形態素解析ライブラリであるKuromoji.jsを使用した。
+
 
 
 
 \subsection{結果}
 
-可視化結果の想定図をFig.2に示す。Fig.2において、まず積み重ね折れ線グラフは患者の1回1回の発言の中での、アドラー心理学の各カテゴリの分布を可視化している。ただし1回1回の発言は、話者の交代を発言の区切れ目とする。この積み重ね折れ線グラフにおいて青色は「仕事関係」、ピンク色は「愛（恋愛・家族関係）」、緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している。
+　可視化結果の想定図をFig.2に示す。Fig.2において、まず積み重ね折れ線グラフは患者の1回1回の発言の中での、アドラー心理学の各カテゴリの分布を可視化している。ただし1回1回の発言は、話者の交代を発言の区切れ目とする。この積み重ね折れ線グラフにおいて青色は「仕事関係」、ピンク色は「愛（恋愛・家族関係）」、緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している。
 
  
 Fig.2  セラピストの質問に依る心療内科患者の話題時間変化の可視化
 
 
-次に、積み重ね折れ線グラフにかかっている、紫色ないし濃いグレー色の縦棒は、カウンセラーの質問内容の形態を示す。紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」、濃いグレー色はYes/Noで答えられる、あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している。第1章で述べた通り、患者が何に問題意識を感じているかをカウンセリングで引き出すには、カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている。
+　次に、積み重ね折れ線グラフにかかっている、紫色ないし濃いグレー色の縦棒は、カウンセラーの質問内容の形態を示す。紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」、濃いグレー色はYes/Noで答えられる、あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している。第1章で述べた通り、患者が何に問題意識を感じているかをカウンセリングで引き出すには、カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている。
 　模擬データでの可視化結果をFig.3、2014年11月検討会 患者A瞑想後での可視化結果をFig.4、2015年11月検討会 患者A瞑想後での可視化結果をFig.5に示す。
 
 
@@ -53,9 +54,9 @@ Fig.2  セラピストの質問に依る心療内科患者の話題時間変化の可視化
 　インタラクティブ性がない。現状ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず、1回1回ブラウザ上でページをリロードして、カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている。ブラウザ上でページをリロードしなくも、チェックボックスの選択を変えることでシームレスにグラフが変化することが求められた。
 　
 　
-　
-カウンセラーの質問区分けも手動で修正したい
-どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので、マウスオーバーによって発言内容が表示される仕組みを作りたい
+
+　カウンセラーの質問区分けも手動で修正したい
+　どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので、マウスオーバーによって発言内容が表示される仕組みを作りたい
 　原文から、セラピストから患者への質問事項の分類の指標として、患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので、それぞれの発言量の可視化の実装を盛り込むべきであると考えられる。
 　また、患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや、カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められた。
 
@@ -63,10 +64,32 @@ Fig.2  セラピストの質問に依る心療内科患者の話題時間変化の可視化
 
 
 \section{提案システム2}
+
+　提案システム1の考察を受け、修正および改善を行った。
+
 \subsection{手法}
 
-　カウンセリングの文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかっていたのを
+模擬データでの考察をFig.6、2014年11月検討会 患者A瞑想後での考察をFig.7、2015年11月検討会 患者A瞑想後での考察をFig.8に示す。
+
+　提案システム1においてカウンセリング文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかっていたのを、提案システム2においては必要時間約４秒にまで抑えた。
+。
+　また、提案システム1においてはインタラクティブ性がなかった。各単語を患者の話題の分野ごとにわけるチェックボックスについて、提案システム1ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず、1回1回ブラウザ上でページをリロードして、カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じていた。しかし提案システム2では、ブラウザ上でページをリロードしなくも、チェックボックスの選択を変えることでシームレスにグラフが変化するように改善した。また、患者の話題の分野を各単語ごとに決め打ちしたものだけでなく、決め打ちしていないものに関しても選択肢を表示し選択できるようにした。
+　さらに提案システムでは、カウンセラーからの各質問においても、5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」なのか、Yes/Noで答えられる、あるいは一言だけで簡単答えられるような「閉じられた質問」なのか、あるいは無駄話・相づちなど、どちらにも分類されないような「その他」なのかを、ユーザーが手動で修正できるようにした。
+　カウンセラーからの各質問において、それぞれ「開かれた質問」「閉じられた質問」「その他」の選択肢が表示され、提案システム1で予測された選択肢にあらかじめチェックが入っているようプログラムした。そして、各単語を患者の話題の分野ごとにわけるチェックボックスと同様に、ブラウザ上でページをリロードしなくも、チェックボックスの選択を変えることでシームレスにグラフが変化するようにした。
+
+　
+　どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので、マウスオーバーによって発言内容が表示される仕組みを作った。
+　カウンセラーからの質問の区分けを示す各縦棒について、それぞれその上をマウスオーバーするたびに、積み重ね折れ線グラフを描画するSVG領域のすぐ上に、各々その縦棒が指し示すカウンセラーからの質問に対応する発言、および、そのカウンセラーの発言から、患者の発言とカウンセラーの発言を含めてそれぞれ前後3発言ずつを描画するようにプログラムした。つまり、患者の発言が前後2発言ずつ、カウンセラーの発言が3発言表示されているようにした。
+
+
 
 \subsection{結果}
-\subsection{考察}
+
+
+
+\subsection{課題}
+
+　原文から、セラピストから患者への質問事項の分類の指標として、患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので、それぞれの発言量の可視化の実装を盛り込むべきであると考えられる。
+　また、患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや、カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められた。
+
 
