--- a/chapter3.tex
+++ b/chapter3.tex
@@ -13,14 +13,13 @@
 
 \section{提案システム1}
 \subsection{手法}
-まず本論文の実験で用いる対象データについて述べる．
-本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料を使用した。
-手順
-各カウンセリング回ごとにテキストデータを分け、さらにヨーガ前とヨーガ後で分けた（計8個のデータ）
-ブラウザ上で
-各テキストファイルを読み込んで形態素解析した。
-形態素解析には、JavaScript言語の形態素解析ライブラリであるkutomoji.jsを使用した。
-カウンセリング文字起こしテキストデータを形態素解析し、共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探す。そこから、カウンセラーからの質問形態と、 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化する
+　まず本論文の実験で用いる対象データについて述べる．
+　本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料を使用した。
+　次に、提案システムの手順を説明する。
+　まず、各カウンセリング回ごとにテキストデータを分け、さらにヨーガ前とヨーガ後で分けた（計8個のデータ）
+　ブラウザ上で各テキストファイルを読み込んで形態素解析した。
+　形態素解析には、JavaScript言語の形態素解析ライブラリであるkutomoji.jsを使用した。
+　カウンセリング文字起こしテキストデータを形態素解析し、共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探す。そこから、カウンセラーからの質問形態と、 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化する
 
 分析
 エキスパートレビュー
