--- a/chapter3.tex
+++ b/chapter3.tex
@@ -92,3 +92,68 @@ Fig.2  セラピストの質問に依る心療内科患者の話題時間変化の可視化
 　また、患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや、カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められた。
 
 
+小山田先生（皆さま）
+
+　いろいろとありがとうございます。
+　一つ不具合がありました。150129agoを見ながら、質問形式のチェックボック
+スを切り替えた後、グラフが消えてしまいました。その後、出てきません。最近
+のものはそうでもなかったようです。すべては見ておりませんので、なんともい
+えませんが。
+
+　さて、まずは回答です。
+
+> １．「愛」「仕事」などの分類に選択する単語について、品詞レベル（動詞・形容詞・名詞など）で限定する予定ですが、いかがでしょうか？
+
+　これは、品詞レベルでは分類不可能です。「仕事」という単語が出てきても、
+愛の課題としての夫についてのはなしをしているときは、そのシチュエーション
+では愛の課題となります。動詞、形容詞も同じく、どの課題のシチュエーション
+の中で使用されているかで決まりますので、この分類方法は不適当といえます。
+　よって、話題がこの３つの課題のどれに入っているか、という分類でしかでき
+ないと考えます。つまり、１文がどの課題に入っているか、という分類ならばわ
+かります。
+　たとえば、「うちの夫は仕事にいくのを嫌がって、毎朝起きてこないんです。
+それを見ているだけで腹が立つんです。自分の同僚が同じように仕事に行きたが
+らなくて朝起きなかったという話を聞いても、さほど腹は立ちませんが、夫がそ
+うなるのは絶対に許せない！！」というような文章です。最初の文は愛の課題、
+第２文は仕事の課題、夫がそうなるのは絶対許せない！！は愛の課題です。
+
+
+> ２．セラピストの質問を表す縦軸の太さや間隔をセラピストや患者の発言数に応じて変更する予定ですが、いかがでしょうか？（現状では、同じ太さで等間隔です）
+
+　これはナイスだと思います。
+
+
+> ３．その他、使用した際に不便だと感じたこと、もし実用的なものにするにはどういう機能がついていればいいか等、ご意見あればご教示お願いします。
+
+
+　発話量の折れ線グラフの色分けについては、１．でも述べましたが、その人の
+関心が向いている話題によって分けられますので、分類方法の工夫が必要と考え
+ます。
+
+　また、実際には、話している中で関心がどんどん飛んでいく人が多いため、さ
+て、どうしていくか、というところが悩むところですね。
+
+　いずれにしても、セラピストの発話については、十分とらえられると思います。質問形式（開かれた、閉じられた）と解釈と、相槌・その他と無駄話に分けるの
+はどうでしょうか。無駄話と相槌は同レベルではなく、カウンセリングに必要か
+どうかの重みが違いますので、分けてもらう方がいいように思います。
+
+　セラピストのスーパーヴィジョンとして使用していく方が、今は妥当のように
+思います。そのためには、セラピストの発話内容を正確に分類していく方が的確
+に可視化できると考えました。
+
+　心理臨
+床におけるスーパーヴィジョンにおいて、客観性にもとづく指導が可能になって
+いけることを願っております。こういう着想はありませんでしたので、大変期待
+しているところです。
+
+　さて、１０３０と０８０１を見ましたが、質問形式の設定において、セラピス
+トとクライエントの会話が混在しており、クライエントの会話については設定が
+できませんでした。ここでクライエントの会話文を質問形式と無駄話にわける意
+味はないでしょうから、会話形式については、セラピストの発話だけにしていた
+だけるといいですね。
+
+　また、このような混在があったときに、ユーザー側で削除できるようにしてい
+ただくとスピーディーに修正が可能と考えます。
+
+
+
