--- a/chapter3.tex
+++ b/chapter3.tex
@@ -130,23 +130,20 @@ Fig.2  セラピストの質問に依る心療内科患者の話題時間変化の可視化
 関心が向いている話題によって分けられますので、分類方法の工夫が必要と考え
 ます。
 
-　また、実際には、話している中で関心がどんどん飛んでいく人が多いため、さ
-て、どうしていくか、というところが悩むところですね。
+　また実際には、話している中で関心がどんどん飛んでいく人が多いため、どうしていくか
 
-　いずれにしても、セラピストの発話については、十分とらえられると思います。質問形式（開かれた、閉じられた）と解釈と、相槌・その他と無駄話に分けるの
-はどうでしょうか。無駄話と相槌は同レベルではなく、カウンセリングに必要か
+　いずれにしても、セラピストの発話については、十分とらえられると思います。質問形式（開かれた、閉じられた）と解釈と、相槌・その他と無駄話に分ける。無駄話と相槌は同レベルではなく、カウンセリングに必要か
 どうかの重みが違いますので、分けてもらう方がいいように思います。
 
 　セラピストのスーパーヴィジョンとして使用していく方が、今は妥当のように
 思います。そのためには、セラピストの発話内容を正確に分類していく方が的確
 に可視化できると考えました。
 
-　心理臨
-床におけるスーパーヴィジョンにおいて、客観性にもとづく指導が可能になって
+　心理臨床におけるスーパーヴィジョンにおいて、客観性にもとづく指導が可能になって
 いけることを願っております。こういう着想はありませんでしたので、大変期待
 しているところです。
 
-　さて、１０３０と０８０１を見ましたが、質問形式の設定において、セラピス
+　１０３０と０８０１を見ましたが、質問形式の設定において、セラピス
 トとクライエントの会話が混在しており、クライエントの会話については設定が
 できませんでした。ここでクライエントの会話文を質問形式と無駄話にわける意
 味はないでしょうから、会話形式については、セラピストの発話だけにしていた
