--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 \chapter{結論}
 \input{chapter8.tex}
 
-\bibliographystyle{kueethesis}
+\bibliographystyle{kueethesis} % まず，文献目録を掲載する tex ファイルを開き、プリアンブルに使用したい BibTeX のスタイルファイル(bstファイル)を指定します
 \bibliography{main}
 
 \end{document}
