dont ignore bbl and big

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -9,24 +9,29 @@
 
 　心療内科では、心身症やストレスからくる身体症状が取り扱われている。
 　心理学の学派の一つに、アドラー心理学がある。
-　アドラー心理学は、オーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し、その後継者たちが発展させた心理学の理論、思想と治療技法の体系である。
+　アドラー心理学は、オーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し、その後継者たちが発展させた心理学の理論、思想と治療技法の体系である。\cite{ad}
 　個人心理学(Individual Psychology)というのが正式名称であるが、個人心理学というと、個人を細かく分析したり個人のみに焦点を合わせるように誤解されやすいので、日本では、この名称はあまり使われていない。
 
 　理論的な特徴として、
-人間を分割できない全体として把握し、理性と感情・意識と無意識などの対立を認めないこと(全体論)
-行動の原因でなく目的を理解しようとすること(目的論)
-客観事実よりも、客観事実に対する個人の主観的認知のシステムを重視すること(認知論)
-精神内界よりも個人とその相手役との対人関係を理解しようとすること(対人関係論)
+\begin{itemize}
+ \item 人間を分割できない全体として把握し、理性と感情・意識と無意識などの対立を認めないこと(全体論)
+ \item 客観事実よりも、客観事実に対する個人の主観的認知のシステムを重視すること(認知論)
+ \item 精神内界よりも個人とその相手役との対人関係を理解しようとすること(対人関係論)
+\end{itemize}
 などがあげられる。
 　思想的な特徴としては、
-他者を支配しないで生きる決心をすること
-他者に関心を持って相手を援助しようとすること
+\begin{itemize}
+ \item 他者を支配しないで生きる決心をすること
+ \item 他者に関心を持って相手を援助しようとすること
+ \item 他者を支配しないで生きる決心をすること
+ \item 他者に関心を持って相手を援助しようとすること
+\end{itemize}
 などがあげられる。
 　治療技法としては、
-現実的に達成可能な治療目標の一致をとること(目標の一致）
-　クライエント、すなわり患者の言うことの主として目的について推量をして、それをクライエントに確認をとること(解釈と推量）
-　クライエント自身が自分の責任で解決しなければならない課題と、クライエントには責任がなく介入する権利がない課題とを区別すること（課題の分離）
-　目標達成のためのさまざまなアイディアを提供すること（代替案の提示）
+ \item 現実的に達成可能な治療目標の一致をとること(目標の一致）
+ \item クライエント、すなわり患者の言うことの主として目的について推量をして、それをクライエントに確認をとること(解釈と推量）
+ \item クライエント自身が自分の責任で解決しなければならない課題と、クライエントには責任がなく介入する権利がない課題とを区別すること（課題の分離）
+ \item 目標達成のためのさまざまなアイディアを提供すること（代替案の提示）　
 などがあげられる。
 
 　アドラー心理学は、社会精神医学・自我心理学・人間学的心理学などの現代の心理学諸潮流の理論的先駆けであるといわれている。（以上、日本アドラー心理学会Webページより）
