--- a/chapter2.tex
+++ b/chapter2.tex
@@ -10,14 +10,12 @@
 
 \subsection{単語共起ネットワーク図}
 
-　カウンセリングを文字起こししたテキストデータを形態素解析し、各単語の共起関係のネットワーク図を描画した。今回、テキストデータの形態素解析、および共起関係のネットワークの可視化には、テキストマイニングのフリーソフトウェアである、樋口耕一氏の KH Coder を使用した。解析には、統計計算とグラフィックスのための環境「R」を内部で利用している。
+　カウンセリングを文字起こししたテキストデータを形態素解析し、各単語の共起関係のネットワーク図を描画した。\cite{kh}今回、テキストデータの形態素解析、および共起関係のネットワークの可視化には、テキストマイニングのフリーソフトウェアである、樋口耕一氏の KH Coder を使用した。解析には、統計計算とグラフィックスのための環境「R」を内部で利用している。
 テキストデータの形態素解析、および共起関係のネットワークの可視化には、テキストマイニングのフリーソフトウェアである、樋口耕一氏のKH Coderを使用した。解析には、統計計算とグラフィックスのための環境「R」を内部で利用している。
 　KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり、どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である。KH Coderは改行によって段落を認識し、句点によって文を認識する。よってひと段落ないし一文を集計単位として設定することが可能になっている。1)
 
 　KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり、どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である。KH Coderは改行によって段落を認識し、句点によって文を認識する。よってひと段落ないし一文を集計単位として設定することが可能になっている。1)
 
-
-今回、カウンセリングを文字起こししたテキストデータを形態素解析し、各単語の共起関係のネットワーク図を描画した。
 
 　ヨーガ心療のカウンセリングを文字起こししたテキストデータには、「心療内科における摂食障害専門ヨーガ療法グループ」の「第11回　ヨーガ療法事例検討会」2)3)を用いた。
 患者Bに対して2014年9月11日に行われたセッションのヨーガ前のカウンセリングテキストデータを、共起関係の集計単位を段落としてKH Coderで描画した共起ネットワーク図をFig.1に示す。
@@ -47,6 +45,23 @@
 %%% しかし，これらの文献では渦と熱輸送との関係を可視化した後，対話的かつ連続的に次の分析を行うことのできるビジュアル分析システムの開発は行われていない．
 
 %%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
+
+そのような現世のパターンを調査することに興味があるユーザーにとって、異なるイベントか時点が2つのモデルで違ってハイライトされるかどうかについて見ることが、重要である場合がある。
+この終了までに、モデル(図9を見ます)全体で時間とともに傾向を比較するために、我々は非対称の話題フロー図を作成した。
+軸より上に現れている1つのモデルの話題と下記のように見えている他のモデルの話題で、2つのモデルからの話題密度は、横時間軸に沿って計画される。
+2つのモデルでハイライトされている傾向とイベントで左右対称(または非対称)を探すのを、これはユーザーが許す。
+
+特に同じ文書の上でできているモデルのために、大きな変化が、話題の世界的な形にないかもしれない。
+しかし、個々の話題の作用は、ユーザーにもう一つより1つのモデルを好ませるために、面白い違いを示すことができる。
+そのような違いを調査するために、我々はユーザーが2つのモデル全体で直接整列する話題を比較するのを許す。
+他のモデル(第4.1.1節で定める同じ話題調整方法を使用する)で、1つのモデルの個々の話題の上のブラッシングは、その最も整列する話題をハイライトする。
+話題をクリックすることは、離れて選ばれたものとその最も接近した試合以外の他の全ての話題を濾過する。
+
+これは、裂けた/合併された話題の間の有益な比較を提供することができる。
+そのような話題は時間全体で一様に割られるかもしれなくて、でなければ、交替するかもしれない。そして、異なるイベント(図10を見ます)をハイライトする。
+分裂が典型的なパラメータの意味論的な一つかランダムな人工品であるかどうか決めるのに、この区別は、ユーザーが役立つことができる。
+
+
 
 カウンセラーの質問の種類分けをいかに描画するかが重要となる。
 
