--- a/main.bib
+++ b/main.bib
@@ -1,14 +1,14 @@
 
 
-@ARTICLE(k1,
-	author = "鈴木洋，鈴木健二郎，井上義章，萩原良道",
-	title = "角柱の挿入により非定常化した平行平板間流れと熱伝達",
-	journal = "日本機械学会論文集(B編)",
-	year = 1991,
-        volume = "57",
-        number = "536",
-        pages = "1403-1409"
-)
+%@ARTICLE(k1,
+%	author = "鈴木洋，鈴木健二郎，井上義章，萩原良道",
+%	title = "角柱の挿入により非定常化した平行平板間流れと熱伝達",
+%	journal = "日本機械学会論文集(B編)",
+%	year = 1991,
+  %      volume = "57",
+%        number = "536",
+ %       pages = "1403-1409"
+%)
 
 
 @ARTICLE(ad,
@@ -20,5 +20,17 @@
 	title = "KH Coder http://khc.sourceforge.net/l"
 )
 
+@ARTICLE(manu,
+      author = "樋口耕一",
+	title = "KH Coder 2.x リファレンス・マニュアル",
+	year = 2015
+)
 
 
+@ARTICLE(kuro,
+	title = "Kuromoji.js https://github.com/takuyaa/kuromoji.js"
+)
+
+@ARTICLE(force,
+	title = "Force-Directed Graph https://github.com/mbostock/d3/wiki/Force-Layout"
+)
