--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,113 +1,105 @@
-本章では，本研究で提案するビジュアル分析システムで用いる計算，技術について述べる．また，実験で使用するデータについても述べる．
+　本章では，本研究で提案するビジュアル分析システムで用いる計算，技術について述べる．また，実験で使用するデータについても述べる．
 
 \section{提案システム1}
 
 \subsection{手法}
 　まず本論文の実験で用いる対象データについて述べる．
 　本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料を使用した．
-　次に、提案システムの手順を説明する．
-　まず、各カウンセリング回ごとにテキストデータを分け、さらにヨーガ前とヨーガ後で分けた（計8個のデータ）
+　次に，提案システムの手順を説明する．
+　まず，各カウンセリング回ごとにテキストデータを分け，さらにヨーガ前とヨーガ後で分けた（計8個のデータ）
 　ブラウザ上で各テキストファイルを読み込んで形態素解析した．
-　形態素解析には、JavaScript言語の形態素解析ライブラリであるkutomoji.jsを使用した．
-　カウンセリング文字起こしテキストデータを形態素解析し、共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探す．そこから、カウンセラーからの質問形態と、 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化する．
+　形態素解析には，JavaScript言語の形態素解析ライブラリであるkutomoji.jsを使用した．
+　カウンセリング文字起こしテキストデータを形態素解析し，共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探す．そこから，カウンセラーからの質問形態と， 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化する．
 
-　正当性はエキスパートレビューにて検証した。
+　正当性はエキスパートレビューにて検証した．
 
 　使用方法について説明する．
-　カウンセリングの文字起こしテキストデータのjsonファイルを[\{"a":"(本文)"\}]の形式で作成し、読み込ませた．
-　jsonファイル内の本文の形式について説明する．全角表示のコロン（：）で話者の交代を認識、全角表示のコロン（：）、全角表示の句点（．）ないしクエスチョンマーク（？,?）で文の終わりを認識するよう設定されている．そのため、話者が交代するたびに全角表示のコロン（：）で区切れ目を示さないといけない．
+　カウンセリングの文字起こしテキストデータのjsonファイルを[\{"a":"(本文)"\}]の形式で作成し，読み込ませた．
+　jsonファイル内の本文の形式について説明する．全角表示のコロン（：）で話者の交代を認識，全角表示のコロン（：），全角表示の句点（．）ないしクエスチョンマーク（？,?）で文の終わりを認識するよう設定されている．そのため，話者が交代するたびに全角表示のコロン（：）で区切れ目を示さないといけない．
 　形態素解析にはJavaScriptにおける形態素解析ライブラリであるKuromoji.jsを使用した．
 
 \subsection{結果}
 
-　可視化結果の想定図をFig.2に示す．Fig.2において、まず積み重ね折れ線グラフは患者の1回1回の発言の中での、アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は、話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」、ピンク色は「愛（恋愛・家族関係）」、緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
+　可視化結果の想定図をFig.2に示す．Fig.2において，まず積み重ね折れ線グラフは患者の1回1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・家族関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
 
 　セラピストの質問に依る心療内科患者の話題時間変化の可視化
 
-　次に、積み重ね折れ線グラフにかかっている、紫色ないし濃いグレー色の縦棒は、カウンセラーの質問内容の形態を示す．紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」、濃いグレー色はYes/Noで答えられる、あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している．第1章で述べた通り、患者が何に問題意識を感じているかをカウンセリングで引き出すには、カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
-　模擬データでの可視化結果をFig.3、2014年11月検討会 患者A瞑想後での可視化結果をFig.4、2015年11月検討会 患者A瞑想後での可視化結果をFig.5に示す．
+　次に，積み重ね折れ線グラフにかかっている，紫色ないし濃いグレー色の縦棒は，カウンセラーの質問内容の形態を示す．紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃いグレー色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している．第1章で述べた通り，患者が何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
+　模擬データでの可視化結果をFig.3，2014年11月検討会 患者A瞑想後での可視化結果をFig.4，2015年11月検討会 患者A瞑想後での可視化結果をFig.5に示す．
 
 \subsection{考察}
 
-模擬データでの考察をFig.6、2014年11月検討会 患者A瞑想後での考察をFig.7、2015年11月検討会 患者A瞑想後での考察をFig.8に示す．
+　模擬データでの考察をFig.6，2014年11月検討会 患者A瞑想後での考察をFig.7，2015年11月検討会 患者A瞑想後での考察をFig.8に示す．
 
 　カウンセリングの文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかる．
-　インタラクティブ性がない．現状ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず、1回1回ブラウザ上でページをリロードして、カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも、チェックボックスの選択を変えることでシームレスにグラフが変化することが求められた．
+　インタラクティブ性がない．現状ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化することが求められた．
 
-　カウンセラーの質問区分けも手動で修正したい
-　どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので、マウスオーバーによって発言内容が表示される仕組みを作りたい
-　原文から、セラピストから患者への質問事項の分類の指標として、患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので、それぞれの発言量の可視化の実装を盛り込むべきであると考えられる．
-　また、患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや、カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められた．
+　カウンセラーの質問区分けも手動で修正したい．
+　どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので，マウスオーバーによって発言内容が表示される仕組みを作りたい
+　原文から，セラピストから患者への質問事項の分類の指標として，患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであると考えられる．
+　また，患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められた．
 
 \section{提案システム2}
 
-　提案システム1の考察を受け、修正および改善を行った．
+　提案システム1の考察を受け，修正および改善を行った．
 
 \subsection{手法}
 
-　模擬データでの考察をFig.6、2014年11月検討会 患者A瞑想後での考察をFig.7、2015年11月検討会 患者A瞑想後での考察をFig.8に示す．
+　模擬データでの考察をFig.6，2014年11月検討会 患者A瞑想後での考察をFig.7，2015年11月検討会 患者A瞑想後での考察をFig.8に示す．
 
-　提案システム1においてカウンセリング文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかっていたのを、提案システム2においては必要時間約４秒にまで抑えた．
+　提案システム1においてカウンセリング文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかっていたのを，提案システム2においては必要時間約４秒にまで抑えた．
 ．
-　また、提案システム1においてはインタラクティブ性がなかった．各単語を患者の話題の分野ごとにわけるチェックボックスについて、提案システム1ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず、1回1回ブラウザ上でページをリロードして、カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じていた．しかし提案システム2では、ブラウザ上でページをリロードしなくも、チェックボックスの選択を変えることでシームレスにグラフが変化するように改善した．また、患者の話題の分野を各単語ごとに決め打ちしたものだけでなく、決め打ちしていないものに関しても選択肢を表示し選択できるようにした．
-　さらに提案システムでは、カウンセラーからの各質問においても、5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」なのか、Yes/Noで答えられる、あるいは一言だけで簡単答えられるような「閉じられた質問」なのか、あるいは無駄話・相づちなど、どちらにも分類されないような「その他」なのかを、ユーザーが手動で修正できるようにした．
-　カウンセラーからの各質問において、それぞれ「開かれた質問」「閉じられた質問」「その他」の選択肢が表示され、提案システム1で予測された選択肢にあらかじめチェックが入っているようプログラムした．そして、各単語を患者の話題の分野ごとにわけるチェックボックスと同様に、ブラウザ上でページをリロードしなくも、チェックボックスの選択を変えることでシームレスにグラフが変化するようにした．
+　また，提案システム1においてはインタラクティブ性がなかった．各単語を患者の話題の分野ごとにわけるチェックボックスについて，提案システム1ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じていた．しかし提案システム2では，ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化するように改善した．また，患者の話題の分野を各単語ごとに決め打ちしたものだけでなく，決め打ちしていないものに関しても選択肢を表示し選択できるようにした．
+　さらに提案システムでは，カウンセラーからの各質問においても，5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」なのか，Yes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」なのか，あるいは無駄話・相づちなど，どちらにも分類されないような「その他」なのかを，ユーザーが手動で修正できるようにした．
+　カウンセラーからの各質問において，それぞれ「開かれた質問」「閉じられた質問」「その他」の選択肢が表示され，提案システム1で予測された選択肢にあらかじめチェックが入っているようプログラムした．そして，各単語を患者の話題の分野ごとにわけるチェックボックスと同様に，ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化するようにした．
 
-　どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので、マウスオーバーによって発言内容が表示される仕組みを作った．
-　カウンセラーからの質問の区分けを示す各縦棒について、それぞれその上をマウスオーバーするたびに、積み重ね折れ線グラフを描画するSVG領域のすぐ上に、各々その縦棒が指し示すカウンセラーからの質問に対応する発言、および、そのカウンセラーの発言から、患者の発言とカウンセラーの発言を含めてそれぞれ前後3発言ずつを描画するようにプログラムした．つまり、患者の発言が前後2発言ずつ、カウンセラーの発言が3発言表示されているようにした．
+　どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので，マウスオーバーによって発言内容が表示される仕組みを作った．
+　カウンセラーからの質問の区分けを示す各縦棒について，それぞれその上をマウスオーバーするたびに，積み重ね折れ線グラフを描画するSVG領域のすぐ上に，各々その縦棒が指し示すカウンセラーからの質問に対応する発言，および，そのカウンセラーの発言から，患者の発言とカウンセラーの発言を含めてそれぞれ前後3発言ずつを描画するようにプログラムした．つまり，患者の発言が前後2発言ずつ，カウンセラーの発言が3発言表示されているようにした．
 
 \subsection{結果}
 
 \subsection{課題}
 
-　原文から、セラピストから患者への質問事項の分類の指標として、患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので、それぞれの発言量の可視化の実装を盛り込むべきであると考えられる．
-　また、患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや、カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められた．
+　原文から，セラピストから患者への質問事項の分類の指標として，患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであると考えられる．
+　また，患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められた．
 
 
-　「愛」「仕事」などの分類に選択する単語について、品詞レベル（動詞・形容詞・名詞など）で分類することは不可能だと考えられる．たとえば、「仕事」という単語が出てきても、
-愛の課題としての夫についてのはなしをしているときは、そのシチュエーション
-では愛の課題になる．動詞、形容詞も同じく、どの課題のシチュエーション
-の中で使用されているかによってどの分類かが決定されるので、この分類方法は不適当と考えられる．
-　よって、話題がこの３つの課題のどれに入っているか、という分類でしかでき
-ないと考えます．つまり、１文がどの課題に入っているか、という分類が適当だと考えられる．
-　たとえば、「うちの夫は仕事にいくのを嫌がって、毎朝起きてこないんです．
+　「愛」「仕事」などの分類に選択する単語について，品詞レベル（動詞・形容詞・名詞など）で分類することは不可能だと考えられる．たとえば，「仕事」という単語が出てきても，
+愛の課題としての夫についてのはなしをしているときは，そのシチュエーション
+では愛の課題になる．動詞，形容詞も同じく，どの課題のシチュエーション
+の中で使用されているかによってどの分類かが決定されるので，この分類方法は不適当と考えられる．
+　よって，話題がこの３つの課題のどれに入っているか，という分類でしかでき
+ないと考えます．つまり，１文がどの課題に入っているか，という分類が適当だと考えられる．
+　たとえば，「うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．
 それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたが
-らなくて朝起きなかったという話を聞いても、さほど腹は立ちませんが、夫がそ
-うなるのは絶対に許せない！！」というような文章については、最初の文は愛のタスク、
-　第２文は仕事のタスク、第３文は愛のタスクととらえられる．
+らなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそ
+うなるのは絶対に許せない！！」というような文章については，最初の文は愛のタスク，
+　第２文は仕事のタスク，第３文は愛のタスクととらえられる．
 
 
-> ２．セラピストの質問を表す縦軸の太さや間隔をセラピストや患者の発言数に応じて変更されたデザインを提案した。
+　セラピストの質問を表す縦軸の太さや間隔をセラピストや患者の発言数に応じて変更されたデザインを提案した。
 
-> ３．その他、使用した際に不便だと感じたこと、もし実用的なものにするにはどういう機能がついていればいいか等、ご意見あればご教示お願いします．
+　その他，使用した際に不便だと感じたこと，もし実用的なものにするにはどういう機能がついていればいいか等，意見をいただいた．
 
-　発話量の折れ線グラフの色分けについては、１．でも述べましたが、その人の
-関心が向いている話題によって分けられますので、分類方法の工夫が必要と考え
-ます．
-　また実際には、話している中で関心がどんどん飛んでいく人が多いため、どうしていくか
-　いずれにしても、セラピストの発話については、十分とらえられると思います．質問形式（開かれた、閉じられた）と解釈と、相槌・その他と無駄話に分ける．無駄話と相槌は同レベルではなく、カウンセリングに必要か
-　どうかの重みが違いますので、分けてもらう方がいいように思います．
-　セラピストのスーパーヴィジョンとして使用していく方が、今は妥当のように
-思います．そのためには、セラピストの発話内容を正確に分類していく方が的確
-に可視化できると考えました．
-　心理臨床におけるスーパーヴィジョンにおいて、客観性にもとづく指導が可能になって
-いけることを願っております．こういう着想はありませんでしたので、大変期待
-しているところです．
-　１０３０と０８０１を見ましたが、質問形式の設定において、セラピス
-トとクライエントの会話が混在しており、クライエントの会話については設定が
-できませんでした．ここでクライエントの会話文を質問形式と無駄話にわける意
-味はないので、会話形式については、セラピストの発話だけわけるべきである．
-　また、このような混在があったときに、ユーザー側で削除できるようになるとスピーディーに修正が可能と考えられる．
+　発話量の折れ線グラフの色分けについては，１．でも述べましたが，その人の
+関心が向いている話題によって分けられますので，分類方法の工夫が必要だと考え
+られる．
+　また実際には，話している中で関心がどんどん飛んでいく人が多いため，どうしていくか
+　いずれにしても，セラピストの発話については，十分とらえられると思います．質問形式（開かれた，閉じられた）と解釈と，相槌・その他と無駄話に分ける．無駄話と相槌は同レベルではなく，カウンセリングに必要かどうかの重みが違うので，分けた方がよいと考えられる．
+　セラピストのスーパーヴィジョンとして使用していく方が，今は妥当だと考えられる．そのためには，セラピストの発話内容を正確に分類していく方が的確に可視化できると考えられる．
+　心理臨床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になることが求められる。
+　一部のjsonファイルについて、質問形式の設定において，セラピストとクライエントの会話が混在しており，クライエントの会話については設定ができなかった．ここでクライエントの会話文を質問形式と無駄話にわける意味はないので，会話形式については，セラピストの発話だけわけるべきである．
+　また，このような混在があったときに，ユーザー側で削除できるようになるとスピーディーに修正が可能と考えられる．
 
 
 \section{提案システム3}
 
-　ここで、提案システム1が抱えていた問題への対処について述べる．
-　まずどこがどの発言を表しているかわからないという問題に対して、カウンセラーからクライエントへの質問内容を表現している縦棒をマウスオーバーすると、そこがどの発言なのか表示することで解決を図った．
-インタラクティブ性がなかったという問題に対しては、ラジオボタンのクリックで瞬時にグラフが更新されるように改善を図った．
+　ここで，提案システム1が抱えていた問題への対処について述べる．
+　まずどこがどの発言を表しているかわからないという問題に対して，カウンセラーからクライエントへの質問内容を表現している縦棒をマウスオーバーすると，そこがどの発言なのか表示することで解決を図った．
+　インタラクティブ性がなかったという問題に対しては，ラジオボタンのクリックで瞬時にグラフが更新されるように改善を図った．
 　ラジオボタンが多すぎてグラフが下の方にいっていた問題に対して改善を図った．
-　ローカルでの動作において、ラジオボタン表示に約10秒必要だったところを、約4秒にまで改善した
-患者の発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類した．
-　セラピストの発言について「開かれた質問」「閉じられた質問」だけでなく、「その他」を設け、さらに「その他」を「解釈」「相づち」「無駄話」の3つに分類した．
-　そもそも選択肢を減らすべきだったという問題に対しては、複数の可能性があるものについてのみ選択肢を表示することで改善を図った．
-　分量に応じて縦棒の太さや間隔を変えることを提案し、どの質問のあとに患者がたくさんの会話量を発したかがわかるようになった．
+　ローカルでの動作において，ラジオボタン表示に約10秒必要だったところを，約4秒にまで改善した．
+　患者の発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類した．
+　セラピストの発言について「開かれた質問」「閉じられた質問」だけでなく，「その他」を設け，さらに「その他」を「解釈」「相づち」「無駄話」の3つに分類した．
+　そもそも選択肢を減らすべきだったという問題に対しては，複数の可能性があるものについてのみ選択肢を表示することで改善を図った．
+　分量に応じて縦棒の太さや間隔を変えることを提案し，どの質問のあとに患者がたくさんの会話量を発したかがわかるようになった．
