no number for png

--- a/main.bib
+++ b/main.bib
@@ -16,9 +16,24 @@
 )
 
 
-@ARTICLE(kh,
-	title = "KH Coder http://khc.sourceforge.net/l"
+@ARTICLE(kh1,
+	author = "樋口耕一",
+	title = "テキスト型データの計量的分析 ―2つのアプローチの峻別と統合―",
+	journal = "理論と方法",
+	year = 2004,
+        volume = "19",
+        number = "1",
+        pages = "101-115"
 )
+
+@ARTICLE(kh2,
+	author = "樋口耕一",
+	title = "社会調査のための計量テキスト分析 ――内容分析の継承と発展を目指して",
+	journal = "ナカニシヤ出版",
+	year = 2014
+)
+
+
 
 @ARTICLE(manu,
       author = "樋口耕一",
