--- a/chapter3.tex
+++ b/chapter3.tex
@@ -3,28 +3,26 @@
 \section{提案システム1}
 
 \subsection{手法}
+　
+
 　まず本論文の実験で用いる対象データについて述べる．
 　本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料を使用した．
 　次に，提案システムの手順を説明する．
 　まず，各カウンセリング回ごとにテキストデータを分け，さらにヨーガ前とヨーガ後で分けた（計8個のデータ）
 　ブラウザ上で各テキストファイルを読み込んで形態素解析した．
 　形態素解析には，JavaScript言語の形態素解析ライブラリであるkutomoji.jsを使用した．
-　カウンセリング文字起こしテキストデータを形態素解析し，共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探す．そこから，カウンセラーからの質問形態と， 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化する．
-
-　正当性はエキスパートレビューにて検証した．
-
+　カウンセリング文字起こしテキストデータを形態素解析し，共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探す．そこから，カウンセラーからの質問形態と， 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化した．
 　使用方法について説明する．
 　カウンセリングの文字起こしテキストデータのjsonファイルを[\{"a":"(本文)"\}]の形式で作成し，読み込ませた．
+　本論文では、患者ないしカウンセラーの一発言を、話者の交代によって判断する。つまり、患者の一発言は、カウンセラーが喋り終わって患者が喋り始めてから、患者が喋り終わってカウンセラーが喋り始めるまでである。また、カウンセラーの一発言は、患者が喋り終わってから、あるいはカウンセラーが話を切り出し始めてから、カウンセラーが喋り終わって患者が喋り始めるまでである。
 　jsonファイル内の本文の形式について説明する．全角表示のコロン（：）で話者の交代を認識，全角表示のコロン（：），全角表示の句点（．）ないしクエスチョンマーク（？,?）で文の終わりを認識するよう設定されている．そのため，話者が交代するたびに全角表示のコロン（：）で区切れ目を示さないといけない．
-　形態素解析にはJavaScriptにおける形態素解析ライブラリであるKuromoji.jsを使用した．
+　可視化結果の想定図をFig.2に示す．Fig.2において，まず積み重ね折れ線グラフは患者の1回1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・家族関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
+　次に，積み重ね折れ線グラフにかかっている，紫色ないし濃いグレー色の縦棒は，カウンセラーの質問内容の形態を示す．紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃いグレー色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している．第1章で述べた通り，患者が何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
+　このシステムにおいて、
 
 \subsection{結果}
 
-　可視化結果の想定図をFig.2に示す．Fig.2において，まず積み重ね折れ線グラフは患者の1回1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・家族関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
-
-　セラピストの質問に依る心療内科患者の話題時間変化の可視化
-
-　次に，積み重ね折れ線グラフにかかっている，紫色ないし濃いグレー色の縦棒は，カウンセラーの質問内容の形態を示す．紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃いグレー色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している．第1章で述べた通り，患者が何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
+　
 　模擬データでの可視化結果をFig.3，2014年11月検討会 患者A瞑想後での可視化結果をFig.4，2015年11月検討会 患者A瞑想後での可視化結果をFig.5に示す．
 
 \subsection{考察}
