--- a/main.bib
+++ b/main.bib
@@ -15,6 +15,16 @@
 	title = "日本アドラー心理学会 http://adler.cside.ne.jp/about_adler.html"
 )
 
+@book(ad2,
+	author = {HEINZ L. ANSBACHER & ROWENA R. ANSBACHER},
+	title = ｛THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER},
+	publisher = {New York : Haper & Row, Publishers, Inc.},
+	year = 1956
+)
+
+@ARTICLE(sn,
+	title = "日本アドラー心理学会 http://adler.cside.ne.jp/about_adler.html"
+)
 
 @ARTICLE(kh1,
 	author = "樋口耕一",
@@ -26,11 +36,25 @@
         pages = "101-115"
 )
 
-@ARTICLE(kh2,
-	author = "樋口耕一",
-	title = "社会調査のための計量テキスト分析 ――内容分析の継承と発展を目指して",
-	journal = "ナカニシヤ出版",
+%@ARTICLE(kh2,
+%	author = "樋口耕一",
+%	title = "社会調査のための計量テキスト分析 ――内容分析の継承と発展を目指して",
+%	journal = "ナカニシヤ出版",
+%	year = 2014
+%)
+
+@book(kh2,
+	author = {樋口耕一},
+	title = {社会調査のための計量テキスト分析 ――内容分析の継承と発展を目指して},
+	publisher = {ナカニシヤ出版},
 	year = 2014
+)
+
+@book(sn0,
+	author = {キャサリン・コーリンほか},
+	title = ｛心理学大辞典},
+	publisher = {三省堂},
+	year = 2013
 )
 
 
@@ -49,3 +73,10 @@
 @ARTICLE(force,
 	title = "Force-Directed Graph https://github.com/mbostock/d3/wiki/Force-Layout"
 )
+
+
+@article{庄?亮2014web,
+  title={Web カウンセリングシステムの開発および心理データの可視化},
+  author={庄?亮 and others},
+  year={2014}
+}
