--- a/chapter1.tex
+++ b/chapter1.tex
@@ -7,9 +7,19 @@
 
 %%% 各章は以下のように構成される．２章では本論文での関連研究を挙げ，３章ではシステムの手法及び構成について説明する．４章では実験方法を述べ，５章ではその結果を分析する．６章では専門家による評価を述べ，７章で本論文の結論と今後の展望について述べる．
 
+　テキストマイニング
+心理学は
 　心療内科では、心身症やストレスからくる身体症状が取り扱われている。
-　心理学の学派の一つに、アドラー心理学がある。
-　アドラー心理学は、オーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し、その後継者たちが発展させた心理学の理論、思想と治療技法の体系である。\cite{ad}
+
+　心理学の学派の一つに、アドラー心理学がある。アドラー心理学は、オーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し、その後継者たちが発展させた心理学の理論、思想と治療技法の体系である\cite{ad}。17世紀にルネ・デカルトが端を発して以来、1879年にヴィルヘルム・ヴントが世界初の心理学実験室を創設したことで哲学的ルーツから切り離された。ジョン・B・ワトソンが「人間の行動――学習されたか否かを問わず、人間の行動や発話の総体――をその主題とする、自然科学の一部門」と述べて以来、アメリカで行動主義が心理学の有力手法となった一方で、実験的証拠よりも観察と症例に基礎を置いたジグムント・フロイトの考えがヨーロッパを中心に広がっていった。フロイトの考えに初めは賛成していたカール・ユングとアルフレート・アドラーは、後にフロイトの考えに異を唱えた。カール・ユングが唱えたのは、人間誰しも、個人的経験には一切基づいていないあるはっきりと分離された無意識の部分、すなわち「集合的無意識」が存在し、「集合的無意識」は神話や象徴として世代を超えて代々受け継がてきた「元型（アーキタイプ）」から成り立っているということであった。
+　一方、アドラーが初めて示唆したのは、個人の心理は現時点における意識的諸力にも影響されるが、社会的領域や環境の影響も同様に見逃せないということであった。
+　現在、世界保健機関（WHO）憲章前文において「健康とは、病気でないとか、弱っていないということではなく、肉体的にも、精神的にも、そして社会的にも、すべてが
+満たされた状態にあることをいいます。（日本WHO協会訳）」と書いてある通り、WHOは健康を肉体的・精神的・社会的という3つの側面からとらえている。一方、アドラーは「人生のすべての問題は、3つの主要な課題に分類することが出来る。すなわち、交友の課題、仕事の課題、愛の課題である[」と唱えた
+。\cite{ad2}
+　
+　臨床心理士資格取得者数は年を経るごとに増加傾向にあり、ベテランのカウンセラーがビギナーのカウンセラーに指導する機会が設けられている。
+　
+　
 　個人心理学(Individual Psychology)というのが正式名称であるが、個人心理学というと、個人を細かく分析したり個人のみに焦点を合わせるように誤解されやすいので、日本では、この名称はあまり使われていない。
 
 　理論的な特徴として、
@@ -44,7 +54,7 @@
 　カウンセラーの質問内容については、大きく2種類に分けられている。YesまたはNoで答える質問、ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている。
 　これに対し、患者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている。患者が何に問題意識を感じているかをカウンセリングで引き出すには、カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている。しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く、患者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている。
 
-　そこで、タイムライン形式の時間軸に沿った可視化によって、クライアントとセラピストの会話を可視化し、セラピストの発した質問によって会話の流れがどのように変化するのかを明らかにすることが重要である。
+　そこで、本研究では、タイムライン形式の時間軸に沿った可視化によって、クライアントとセラピストの会話を可視化し、セラピストの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した。
 
 　クライアントの会話としては、内容がどの課題領域（仕事、交友、愛、セルフタスク、スピリチュアル）に属するのか、セラピストの質問としては、内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である。
 
@@ -52,4 +62,4 @@
 　クライエントの関心に関心を向けるというのがカウンセリングの基本ですので、このようにカウンセラーの関心でクライエントを誘導してしまうことはよろしくありませんので、そのためのチェックが可能になるものと考える。
 
 　もうひとつの課題として、ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので、ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある。これをチェックできることが求められる。
-本論文では、患者ないしカウンセラーの一発言を、話者の交代によって判断する。つまり、患者の一発言は、カウンセラーが喋り終わって患者が喋り始めてから、患者が喋り終わってカウンセラーが喋り始めるまでである。また、カウンセラーの一発言は、患者が喋り終わってから、あるいはカウンセラーが話を切り出し始めてから、カウンセラーが喋り終わって患者が喋り始めるまでである。
+　
