--- a/chapter2.tex
+++ b/chapter2.tex
@@ -2,7 +2,7 @@
 
 
 
-　KH Coderとは、テキスト文章型のデータを統計分析するためのフリーのソフトウェアである。アンケートの自由記述・インタビュー記録・新聞記事など、さまざまな社会調査データを分析するため、立命館大学の樋口耕一氏が制作したものである。計量テキスト分析またはテキストマイニングの方法に対応している。(KH CoderのWebページ参照)
+　KH Coderとは、テキスト文章型のデータを統計分析するためのフリーのソフトウェアである。アンケートの自由記述・インタビュー記録・新聞記事など、さまざまな社会調査データを分析するため、立命館大学の樋口耕一氏が制作したものである。計量テキスト分析またはテキストマイニングの方法に対応している。\cite{kh1}
 
 
 　以下に、KH Coderの主な可視化システムについて紹介する。
@@ -10,7 +10,7 @@
 
 \subsection{単語共起ネットワーク図}
 
-　カウンセリングを文字起こししたテキストデータを形態素解析し、各単語の共起関係のネットワーク図を描画した。\cite{kh}今回、テキストデータの形態素解析、および共起関係のネットワークの可視化には、テキストマイニングのフリーソフトウェアである、樋口耕一氏の KH Coder を使用した。解析には、統計計算とグラフィックスのための環境「R」を内部で利用している。
+　カウンセリングを文字起こししたテキストデータを形態素解析し、各単語の共起関係のネットワーク図を描画した。今回、テキストデータの形態素解析、および共起関係のネットワークの可視化には、テキストマイニングのフリーソフトウェアである、樋口耕一氏の KH Coder を使用した。解析には、統計計算とグラフィックスのための環境「R」を内部で利用している。
 テキストデータの形態素解析、および共起関係のネットワークの可視化には、テキストマイニングのフリーソフトウェアである、樋口耕一氏のKH Coderを使用した。解析には、統計計算とグラフィックスのための環境「R」を内部で利用している。
 　KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり、どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である。KH Coderは改行によって段落を認識し、句点によって文を認識する。よってひと段落ないし一文を集計単位として設定することが可能になっている。1)
 
@@ -46,6 +46,9 @@
 
 %%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
 
+　庄（Webカウンセリングシステムの開発および心理データの可視化）はWebカウンセリングシステムにおいて、折れ線グラフを用いて患者の話題をした。しかし、ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容を患者の発言内容と同時に可視化しなければならない。
+
+
 　そのような現世のパターンを調査することに興味があるユーザーにとって、異なるイベントか時点が2つのモデルで違ってハイライトされるかどうかについて見ることが、重要である場合がある。
 この終了までに、モデル(図9を見ます)全体で時間とともに傾向を比較するために、我々は非対称の話題フロー図を作成した。
 軸より上に現れている1つのモデルの話題と下記のように見えている他のモデルの話題で、2つのモデルからの話題密度は、横時間軸に沿って計画される。
@@ -58,7 +61,7 @@
 　話題をクリックすることは、離れて選ばれたものとその最も接近した試合以外の他の全ての話題を濾過する。
 
 　これは、裂けた/合併された話題の間の有益な比較を提供することができる。
-　そのような話題は時間全体で一様に割られるかもしれなくて、でなければ、交替するかもしれない。そして、異なるイベント(図10を見ます)をハイライトする。
+　そのような話題は時間全体で一様に割られるかもしれなくて、でなければ、交替するかもしれない。そして、異なるイベントをハイライトする。
 　分裂が典型的なパラメータの意味論的な一つかランダムな人工品であるかどうか決めるのに、この区別は、ユーザーが役立つことができる。
 
 
