--- a/chapter3.tex
+++ b/chapter3.tex
@@ -9,6 +9,7 @@
 　本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料を使用した．
 　次に，提案システムの手順を説明する．
 　まず，各カウンセリング回ごとにテキストデータを分け，さらにヨーガ前とヨーガ後で分けた（計8個のデータ）
+　2014年9月11日　11月19日　1月29日
 　ブラウザ上で各テキストファイルを読み込んで形態素解析した．
 　形態素解析には，JavaScript言語の形態素解析ライブラリであるkutomoji.jsを使用した．
 　カウンセリング文字起こしテキストデータを形態素解析し，共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探す．そこから，カウンセラーからの質問形態と， 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化した．
@@ -63,16 +64,10 @@
 
 
 　「愛」「仕事」などの分類に選択する単語について，品詞レベル（動詞・形容詞・名詞など）で分類することは不可能だと考えられる．たとえば，「仕事」という単語が出てきても，
-愛の課題としての夫についてのはなしをしているときは，そのシチュエーション
-では愛の課題になる．動詞，形容詞も同じく，どの課題のシチュエーション
+愛の課題としての夫についてのはなしをしているときは，そのシチュエーションでは愛の課題になる．動詞，形容詞も同じく，どの課題のシチュエーション
 の中で使用されているかによってどの分類かが決定されるので，この分類方法は不適当と考えられる．
-　よって，話題がこの３つの課題のどれに入っているか，という分類でしかでき
-ないと考えます．つまり，１文がどの課題に入っているか，という分類が適当だと考えられる．
-　たとえば，「うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．
-それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたが
-らなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそ
-うなるのは絶対に許せない！！」というような文章については，最初の文は愛のタスク，
-　第２文は仕事のタスク，第３文は愛のタスクととらえられる．
+　よって，話題がこの３つの課題のどれに入っているか，という分類でしかできないと考えます．つまり，１文がどの課題に入っているか，という分類が適当だと考えられる．
+　たとえば，「うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたがらなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそうなるのは絶対に許せない！！」というような文章については，最初の文は愛のタスク，　第２文は仕事のタスク，第３文は愛のタスクととらえられる．
 
 
 　セラピストの質問を表す縦軸の太さや間隔をセラピストや患者の発言数に応じて変更されたデザインを提案した。
