--- a/chapter3.tex
+++ b/chapter3.tex
@@ -33,6 +33,9 @@
 　カウンセリングの文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかる．
 　インタラクティブ性がない．現状ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化することが求められた．
 
+
+\subsubsection{手法}
+\paragraph{手法}
 　カウンセラーの質問区分けも手動で修正したい．
 　どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので，マウスオーバーによって発言内容が表示される仕組みを作りたい
 　原文から，セラピストから患者への質問事項の分類の指標として，患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであると考えられる．
@@ -48,11 +51,16 @@
 
 　提案システム1においてカウンセリング文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかっていたのを，提案システム2においては必要時間約４秒にまで抑えた．
 ．
+\paragraph{手法}
 　また，提案システム1においてはインタラクティブ性がなかった．各単語を患者の話題の分野ごとにわけるチェックボックスについて，提案システム1ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じていた．しかし提案システム2では，ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化するように改善した．また，患者の話題の分野を各単語ごとに決め打ちしたものだけでなく，決め打ちしていないものに関しても選択肢を表示し選択できるようにした．
+\paragraph{手法}
 　さらに提案システムでは，カウンセラーからの各質問においても，5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」なのか，Yes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」なのか，あるいは無駄話・相づちなど，どちらにも分類されないような「その他」なのかを，ユーザーが手動で修正できるようにした．
+\subsubsection{手法}
 　カウンセラーからの各質問において，それぞれ「開かれた質問」「閉じられた質問」「その他」の選択肢が表示され，提案システム1で予測された選択肢にあらかじめチェックが入っているようプログラムした．そして，各単語を患者の話題の分野ごとにわけるチェックボックスと同様に，ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化するようにした．
 
+\subsection{手法}
 　どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので，マウスオーバーによって発言内容が表示される仕組みを作った．
+\subsection{手法}
 　カウンセラーからの質問の区分けを示す各縦棒について，それぞれその上をマウスオーバーするたびに，積み重ね折れ線グラフを描画するSVG領域のすぐ上に，各々その縦棒が指し示すカウンセラーからの質問に対応する発言，および，そのカウンセラーの発言から，患者の発言とカウンセラーの発言を含めてそれぞれ前後3発言ずつを描画するようにプログラムした．つまり，患者の発言が前後2発言ずつ，カウンセラーの発言が3発言表示されているようにした．
 
 \subsection{結果}
@@ -75,6 +83,7 @@
 　その他，使用した際に不便だと感じたこと，もし実用的なものにするにはどういう機能がついていればいいか等，意見をいただいた．
 
 　発話量の折れ線グラフの色分けについては，１．でも述べましたが，その人の
+
 関心が向いている話題によって分けられますので，分類方法の工夫が必要だと考え
 られる．
 　また実際には，話している中で関心がどんどん飛んでいく人が多いため，どうしていくか
@@ -88,11 +97,15 @@
 \section{提案システム3}
 
 　ここで，提案システム1が抱えていた問題への対処について述べる．
+\subsection{手法}
+\subsubsection{手法}
 　まずどこがどの発言を表しているかわからないという問題に対して，カウンセラーからクライエントへの質問内容を表現している縦棒をマウスオーバーすると，そこがどの発言なのか表示することで解決を図った．
 　インタラクティブ性がなかったという問題に対しては，ラジオボタンのクリックで瞬時にグラフが更新されるように改善を図った．
+\subsubsection{手法}
 　ラジオボタンが多すぎてグラフが下の方にいっていた問題に対して改善を図った．
 　ローカルでの動作において，ラジオボタン表示に約10秒必要だったところを，約4秒にまで改善した．
 　患者の発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類した．
+\subsubsection{手法}
 　セラピストの発言について「開かれた質問」「閉じられた質問」だけでなく，「その他」を設け，さらに「その他」を「解釈」「相づち」「無駄話」の3つに分類した．
 　そもそも選択肢を減らすべきだったという問題に対しては，複数の可能性があるものについてのみ選択肢を表示することで改善を図った．
 　分量に応じて縦棒の太さや間隔を変えることを提案し，どの質問のあとに患者がたくさんの会話量を発したかがわかるようになった．
