where is contents

--- a/main.bib
+++ b/main.bib
@@ -1,30 +1,17 @@
 
 
-%@ARTICLE(k1,
-%	author = "鈴木洋，鈴木健二郎，井上義章，萩原良道",
-%	title = "角柱の挿入により非定常化した平行平板間流れと熱伝達",
-%	journal = "日本機械学会論文集(B編)",
-%	year = 1991,
-  %      volume = "57",
-%        number = "536",
- %       pages = "1403-1409"
-%)
 
 
-@ARTICLE(ad,
-	title = "日本アドラー心理学会 http://adler.cside.ne.jp/about_adler.html"
-)
 
-@book(ad2,
-	author = {HEINZ L. ANSBACHER & ROWENA R. ANSBACHER},
-	title = ｛THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER},
-	publisher = {New York : Haper & Row, Publishers, Inc.},
+
+@book{ad2,
+	author = {HEINZ L. ANSBACHER, ROWENA R. ANSBACHER},
+	title = {THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER},
+	publisher = {New York : Haper, Row, Publishers, Inc.},
 	year = 1956
-)
+}
 
-@ARTICLE(sn,
-	title = "日本アドラー心理学会 http://adler.cside.ne.jp/about_adler.html"
-)
+
 
 @ARTICLE(kh1,
 	author = "樋口耕一",
@@ -36,12 +23,7 @@
         pages = "101-115"
 )
 
-%@ARTICLE(kh2,
-%	author = "樋口耕一",
-%	title = "社会調査のための計量テキスト分析 ――内容分析の継承と発展を目指して",
-%	journal = "ナカニシヤ出版",
-%	year = 2014
-%)
+
 
 @book(kh2,
 	author = {樋口耕一},
@@ -52,7 +34,7 @@
 
 @book(sn0,
 	author = {キャサリン・コーリンほか},
-	title = ｛心理学大辞典},
+	title = {心理学大辞典},
 	publisher = {三省堂},
 	year = 2013
 )
@@ -66,13 +48,9 @@
 )
 
 
-@ARTICLE(kuro,
-	title = "Kuromoji.js https://github.com/takuyaa/kuromoji.js"
-)
 
-@ARTICLE(force,
-	title = "Force-Directed Graph https://github.com/mbostock/d3/wiki/Force-Layout"
-)
+
+
 
 
 @article{庄?亮2014web,
