--- a/chapter1.tex
+++ b/chapter1.tex
@@ -38,10 +38,12 @@
 \end{itemize}
 などがあげられる。
 　治療技法としては、
+\begin{itemize}
  \item 現実的に達成可能な治療目標の一致をとること(目標の一致）
  \item クライエント、すなわり患者の言うことの主として目的について推量をして、それをクライエントに確認をとること(解釈と推量）
  \item クライエント自身が自分の責任で解決しなければならない課題と、クライエントには責任がなく介入する権利がない課題とを区別すること（課題の分離）
  \item 目標達成のためのさまざまなアイディアを提供すること（代替案の提示）　
+\end{itemize}
 などがあげられる。
 
 　アドラー心理学は、社会精神医学・自我心理学・人間学的心理学などの現代の心理学諸潮流の理論的先駆けであるといわれている。（以上、日本アドラー心理学会Webページより）
