--- a/chapter3.tex
+++ b/chapter3.tex
@@ -98,14 +98,14 @@
 
 　ここで，提案システム1が抱えていた問題への対処について述べる．
 \subsection{手法}
-\subsubsection{手法}
+\subsubsection｛マウスオーバー}
 　まずどこがどの発言を表しているかわからないという問題に対して，カウンセラーからクライエントへの質問内容を表現している縦棒をマウスオーバーすると，そこがどの発言なのか表示することで解決を図った．
 　インタラクティブ性がなかったという問題に対しては，ラジオボタンのクリックで瞬時にグラフが更新されるように改善を図った．
 \subsubsection{手法}
 　ラジオボタンが多すぎてグラフが下の方にいっていた問題に対して改善を図った．
 　ローカルでの動作において，ラジオボタン表示に約10秒必要だったところを，約4秒にまで改善した．
 　患者の発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類した．
-\subsubsection{手法}
+\subsubsection{「解釈」・「相づち」・「無駄話」}
 　セラピストの発言について「開かれた質問」「閉じられた質問」だけでなく，「その他」を設け，さらに「その他」を「解釈」「相づち」「無駄話」の3つに分類した．
 　そもそも選択肢を減らすべきだったという問題に対しては，複数の可能性があるものについてのみ選択肢を表示することで改善を図った．
 　分量に応じて縦棒の太さや間隔を変えることを提案し，どの質問のあとに患者がたくさんの会話量を発したかがわかるようになった．
