--- a/chapter2.tex
+++ b/chapter2.tex
@@ -46,7 +46,7 @@
 
 %%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
 
-　庄（Webカウンセリングシステムの開発および心理データの可視化）はWebカウンセリングシステムにおいて、折れ線グラフを用いて患者の話題をした。しかし、ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容を患者の発言内容と同時に可視化しなければならない。
+　庄（Webカウンセリングシステムの開発および心理データの可視化）らはWebカウンセリングシステムにおいて、折れ線グラフを用いて患者の話題をした。しかし、ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容を患者の発言内容と同時に可視化しなければならない。
 
 
 　そのような現世のパターンを調査することに興味があるユーザーにとって、異なるイベントか時点が2つのモデルで違ってハイライトされるかどうかについて見ることが、重要である場合がある。
@@ -66,7 +66,8 @@
 
 
 
-　カウンセラーの質問の種類分けをいかに描画するかが重要となる。
+　一方本研究では、カウンセラーとクライエントの会話において、特にカウンセラーの質問の種類分けをいかに描画するかが重要となる。
+
 
 
 　次章ではどのようにシステムを構成したかを述べる．
