--- a/main.bib
+++ b/main.bib
@@ -12,6 +12,48 @@
 }
 
 
+@book{txt1,
+	author = {第11回　ヨーガ療法事例検討会},
+	title = {心療内科における摂食障害専門ヨーガ療法グループ 続報},
+	year = 2014
+}
+@book{txt2,
+	author = {2015.1.24　事例検討会},
+	title = {心療内科における摂食障害専門ヨーガ療法グループ 続報　その２}
+}
+@book{txt3,
+	author = {2015.3.28　事例検討会},
+	title = {心療内科における摂食障害専門ヨーガ療法グループ 続報　その３}
+}
+@book{txt4,
+	author = {心療内科における摂食障害専門ヨーガ療法グループ},
+	title = {2015年10月17日事例検討会用資料}
+}
+@book{txt5,
+	author = {心療内科における摂食障害専門ヨーガ療法グループ},
+	title = {2015年11月28日事例検討会用資料}
+}
+
+
+@ARTICLE{taskdriven,
+	author = {Eric Alexander and Michael Gleicher},
+	title = {Task-Driven Comparison of Topic Models}
+	journal = "IEEE TRANSACTIONS ON VISUALIZATION AND COMPUTER GRAPHICS",
+		year = 2016,
+        	volume = "22",
+        	number = "1",
+        	pages = "320-329"
+}
+
+
+
+@book{zokad,
+	author = {野田俊作},
+	title = {続アドラー心理学　トーキングセミナー　勇気づけの家族コミュニケーション},
+	publisher = {アニマ2001},
+	year = 1991
+}
+
 
 @ARTICLE(kh1,
 	author = "樋口耕一",
@@ -21,6 +63,14 @@
         volume = "19",
         number = "1",
         pages = "101-115"
+)
+
+@ARTICLE(kango,
+	author = "杉浦暁代　新美綾子",
+	title = "プロジェクト学習を用いた成人看護学概論の学習により学生が認識した学びと成長 ―テキストマイニングによる分析―",
+	journal = "第44 回日本看護学会?看護教育?学術集会　抄録集",
+	year = 2013,
+        pages = "60"
 )
 
 
@@ -53,7 +103,7 @@
 
 
 
-@article{庄?亮2014web,
+@article{2014web,
   title={Web カウンセリングシステムの開発および心理データの可視化},
   author={庄?亮 and others},
   year={2014}
