--- a/chapter3.tex
+++ b/chapter3.tex
@@ -29,20 +29,34 @@
 　
 　模擬データでの可視化結果をFig.3，2014年11月検討会 患者A瞑想後での可視化結果をFig.4，2015年11月検討会 患者A瞑想後での可視化結果をFig.5に示す．
 
-\subsection{考察}
 
 　模擬データでの考察をFig.6，2014年11月検討会 患者A瞑想後での考察をFig.7，2015年11月検討会 患者A瞑想後での考察をFig.8に示す．
 
 　カウンセリングの文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかる．
 　インタラクティブ性がない．現状ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化することが求められた．
 
-
-\subsubsection{手法}
-\paragraph{手法}
+\subsection{考察}
 　カウンセラーの質問区分けも手動で修正したい．
 　どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので，マウスオーバーによって発言内容が表示される仕組みを作りたい
 　原文から，セラピストから患者への質問事項の分類の指標として，患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであると考えられる．
 　また，患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められた．
+
+
+\subsubsection{どこがどの発言を表しているかわからない}
+\subsubsection{インタラクティブ性がない}
+描画後にラジオボタンを変えても反応がない。
+
+\subsubsection{「その他」}
+「開かれた質問」「閉じられた質問」だけでなく「その他」を設けるべき
+
+
+\subsubsection{ラジオボタン表示時間}
+
+
+
+
+
+
 
 \section{提案システム２}
 
@@ -54,12 +68,23 @@
 
 　提案システム1においてカウンセリング文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかっていたのを，提案システム2においては必要時間約４秒にまで抑えた．
 ．
-\subsubsection{手法}
+\subsubsection{インタラクティブ性}
 　また，提案システム1においてはインタラクティブ性がなかった．各単語を患者の話題の分野ごとにわけるチェックボックスについて，提案システム1ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じていた．しかし提案システム2では，ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化するように改善した．また，患者の話題の分野を各単語ごとに決め打ちしたものだけでなく，決め打ちしていないものに関しても選択肢を表示し選択できるようにした．
 \subsubsection{「開かれた質問」・「閉じられた質問」・「その他」}
 　さらに提案システムでは，カウンセラーからの各質問においても，5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」なのか，Yes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」なのか，あるいは無駄話・相づちなど，どちらにも分類されないような「その他」なのかを，ユーザーが手動で修正できるようにした．
-\subsubsection{手法}
 　カウンセラーからの各質問において，それぞれ「開かれた質問」・「閉じられた質問」・「その他」の選択肢が表示され，提案システム1で予測された選択肢にあらかじめチェックが入っているようプログラムした．そして，各単語を患者の話題の分野ごとにわけるチェックボックスと同様に，ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化するようにした．
+
+
+
+\subsubsection{どこがどの発言を表しているかわからない}
+\subsubsection{インタラクティブ性がない}
+描画後にラジオボタンを変えても反応がない。
+
+\subsubsection{「その他」}
+「開かれた質問」「閉じられた質問」だけでなく「その他」を設けるべき
+
+
+\subsubsection{ラジオボタン表示時間}
 
 \subsection{手法}
 　どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので，マウスオーバーによって発言内容が表示される仕組みを作った．
@@ -67,8 +92,6 @@
 　カウンセラーからの質問の区分けを示す各縦棒について，それぞれその上をマウスオーバーするたびに，積み重ね折れ線グラフを描画するSVG領域のすぐ上に，各々その縦棒が指し示すカウンセラーからの質問に対応する発言，および，そのカウンセラーの発言から，患者の発言とカウンセラーの発言を含めてそれぞれ前後3発言ずつを描画するようにプログラムした．つまり，患者の発言が前後2発言ずつ，カウンセラーの発言が3発言表示されているようにした．
 
 \subsection{結果}
-
-\subsection{課題}
 
 　原文から，セラピストから患者への質問事項の分類の指標として，患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであると考えられる．
 　また，患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められた．
@@ -78,8 +101,6 @@
 　よって，話題がこの３つの課題のどれに入っているか，という分類でしかできないと考えられる．つまり，１文がどの課題に入っているか，という分類が適当だと考えられる．
 　たとえば，「うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたがらなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそうなるのは絶対に許せない！！」というような文章については，最初の文は愛のタスク，　第２文は仕事のタスク，第３文は愛のタスクととらえられる．
 
-
-　セラピストの質問を表す縦軸の太さや間隔をセラピストや患者の発言数に応じて変更されたデザインを提案した。
 
 　その他，使用した際に不便だと感じたこと，もし実用的なものにするにはどういう機能がついていればいいか等，意見をいただいた．
 
@@ -94,16 +115,40 @@
 　一部のjsonファイルについて、質問形式の設定において，セラピストとクライエントの会話が混在しており，クライエントの会話については設定ができなかった．ここでクライエントの会話文を質問形式と無駄話にわける意味はないので，会話形式については，セラピストの発話だけわけるべきである．
 　また，このような混在があったときに，ユーザー側で削除できるようになるとスピーディーに修正が可能と考えられる．
 
+\subsection{課題}
+
+　患者の発言について
+単語単位ではなく文単位で「愛」「交友」「仕事」を分類すべき
+セラピストの発言について
+「開かれた質問」「閉じられた質問」だけでなく、「解釈」「相づち」「無駄話」も分類すべき
+選択肢が多すぎる
+分量に応じて縦棒の太さや間隔を変えることを提案
+
+
+
+
+
+　セラピストの質問を表す縦軸の太さや間隔をセラピストや患者の発言数に応じて変更されたデザインを提案した。
+
+
+
 
 \section{提案システム３}
 
-<<<<<<< HEAD
-　ここで，提案システム２が抱えていた問題への対処について述べる．
-=======
+
 　提案システム2でセラピストからされた指摘を元に、提案システム3を作成した。
 　ここで，提案システム1が抱えていた問題への対処について述べる．
->>>>>>> in my house
+
 \subsection{手法}
+
+
+患者の発言について
+単語単位ではなく文単位で「愛」「交友」「仕事」を分類すべき
+セラピストの発言について
+「開かれた質問」「閉じられた質問」だけでなく、「解釈」「相づち」「無駄話」も分類すべき
+選択肢が多すぎる
+分量に応じて縦棒の太さや間隔を変えることを提案
+
 　
 \subsubsection{「解釈」・「相づち」・「無駄話」}
 　提案システム2において、患者の発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類していた。
@@ -111,3 +156,17 @@
 　そもそも選択肢を減らすべきだったという問題に対しては，複数の可能性があるものについてのみ選択肢を表示することで改善を図った．
 
 　またカウンセラーの１発言の分量に応じて縦棒の太さを、クライエントの１発言の分量に応じてカウンセラーの発言を表現する縦棒同士の間隔を変えた。こうすることによって、どの質問のあとに患者がたくさんの会話量を発したかがわかるようになった．
+
+
+
+\subsection{結果}
+
+
+
+\section{提案システム４}
+
+
+\subsection{手法}
+
+
+\subsection{結果}
